# PyPOTS

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CNAME  LICENSE  MANIFEST.in  READEME_zh.md  README.md  README_zh.md  csai.py  environment-dev.yml  environment.yml  pyproject.toml  readthedocs.yml  requirements.txt  run_full_test.sh  run_pypots.sh  run_tests.sh  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  model-addition.yml  other-issues.yml  other-questions.yml
.github/workflows/: greetings.yml  issue_manager.yml  linting.yml  publish_to_DockerHub.yml  publish_to_PyPI.yml  stale.yml  testing.yml  testing_ci.yml  testing_daily.yml
docker/: Dockerfile_linux  Dockerfile_linux_amd64_cuda
docs/: Makefile  about_us.rst  algo_table.rst  benchpots.rst  conf.py  examples.rst  faq.rst  gene_html_and_review.sh  gene_new_doc.sh  index.rst  install.rst  milestones.rst  model_api.rst  pygrinder.rst  pypots.anomaly_detection.rst  pypots.classification.rst  pypots.cli.rst  pypots.clustering.rst  pypots.data.rst  pypots.forecasting.rst  pypots.imputation.rst  pypots.modules.rst  pypots.nn.rst  pypots.optim.rst  pypots.representation.rst  pypots.rst  pypots.utils.rst  pypots.vec.rst  references.bib  references.rst  requirements.txt  tsdb.rst
examples/: README.md
output_logs/: Classification.out  Imputation.out
pypots/: __init__.py  __version__.py  base.py  logging.py  version.py
pypots/anomaly_detection/: __init__.py  base.py
pypots/anomaly_detection/autoformer/: __init__.py  model.py
pypots/anomaly_detection/crossformer/: __init__.py  model.py
pypots/anomaly_detection/dlinear/: __init__.py  model.py
pypots/anomaly_detection/etsformer/: __init__.py  model.py
pypots/anomaly_detection/fedformer/: __init__.py  model.py
pypots/anomaly_detection/film/: __init__.py  model.py
pypots/anomaly_detection/imputeformer/: __init__.py  model.py
pypots/anomaly_detection/informer/: model.py  (+1 more)
pypots/classification/: __init__.py  base.py  brits.py  grud.py  raindrop.py
pypots/cli/: base.py  dev.py  doc.py  env.py  hpo.py  pypots_cli.py  tuning.py  utils.py
pypots/clustering/: __init__.py  base.py  crli.py  vader.py
pypots/data/: DatasetForBRITS.py  DatasetForGRUD.py  __init__.py  base.py  checking.py  corrupt.py  dataset_for_brits.py  dataset_for_grud.py  dataset_for_mit.py  generating.py  integration.py  load_preprocessing.py  load_specific_datasets.py  saving.py  specific_datasets.py  utils.py
pypots/datasets/: base.py  specific_datasets.py
pypots/forecasting/: __init__.py  base.py  bttf.py
pypots/gungnir/: __init__.py  client.py
pypots/imputation/: __init__.py  base.py  brits.py  locf.py  mrnn.py  saits.py  transformer.py
pypots/modules/: __init__.py  rnn.py  self_attention.py
pypots/optim/: __init__.py  adadelta.py  adagrad.py  adam.py  adamw.py  base.py  rmsprop.py  sgd.py
pypots/representation/: __init__.py  base.py
pypots/tests/: __init__.py  environment_for_conda_test.yml  environment_for_pip_test.txt  environment_test.yml  global_test_config.py  test_classification.py  test_cli.py  test_clustering.py  test_data.py  test_data_lazy_loading_from_file.py  test_data_unified.py  test_environment_pip.txt  test_forecasting.py  test_imputation.py  test_logging.py  test_utils.py  unified_data_for_test.py
pypots/timeseries_ai/: __init__.py  client.py
pypots/utils/: __init__.py  file.py  files.py  logging.py  metrics.py  random.py  visual.py  visualization.py
pypots/vec/: base.py
requirements/: conda_dev_env.yml  conda_env.yml  environment-dev.yml  environment_for_conda_test.yml  requirements-dev.txt  requirements.txt  requirements_dev.txt
tests/: __init__.py  environment_for_conda_test.yml  generating_h5_datasets.py  global_test_config.py  test_classification.py  test_cli.py  test_clustering.py  test_data.py  test_forecasting.py  test_imputation.py  test_optim.py  test_patience_none.py  test_training_on_multi_gpus.py  test_utils.py
tests/anomaly_detection/: autoformer.py  dlinear.py  imputeformer.py  patchtst.py  reformer.py  saits.py  scinet.py  segrnn.py  tefn.py  timemixerpp.py  timesnet.py
tests/classification/: autoformer.py  brits.py  config.py  csai.py  grud.py  itransformer.py  patchtst.py  raindrop.py  saits.py  seft.py  tefn.py  timesnet.py  ts2vec.py
tests/cli/: config.py  dev.py  doc.py  env.py
tests/clustering/: __init__.py  config.py  crli.py  vader.py
tests/data/: lazy_loading_strategy.py  saving.py  utils.py
tests/forecasting/: bttf.py  config.py  csdi.py  dlinear.py  film.py  fits.py  micn.py  mixlinear.py  moderntcn.py  segrnn.py  tefn.py  timemixer.py  timemixerpp.py  timesnet.py  transformer.py
tests/imputation/: autoformer.py  brits.py  config.py  crossformer.py  csai.py  csdi.py  dlinear.py  etsformer.py  fedformer.py  film.py  fits.py  frets.py  gpvae.py  grud.py  imputeformer.py  informer.py  itransformer.py  koopa.py  lerp.py  locf.py  mean.py  median.py  micn.py  moderntcn.py  mrnn.py  nonstationary_transformer.py  patchtst.py  pits.py  pyraformer.py  reformer.py  revin_scinet.py  saits.py  scinet.py  segrnn.py  stemgnn.py  tcn.py  tefn.py  tide.py  timellm.py  timemixer.py  (+8 more)
tests/optim/: adadelta.py  adagrad.py  adam.py  adamw.py  config.py  lr_schedulers.py  rmsprop.py  sgd.py
tests/representation/: ts2vec.py
tests/utils/: logging.py  random.py  visual.py
tests/vec/: __init__.py  ts2vec.py
tutorials/: README.md
(+641 files in other folders)
